# DesktopMemo

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  notes.rs
src/components/: CommandPalette.tsx  Editor.tsx  Favorites.tsx  Sidebar.tsx  TodoList.tsx  Tree.tsx
